<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/SCREEN"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="403dp"
        android:layout_height="254dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039"
        app:srcCompat="@drawable/notebook" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lets_let_you_login"
        style="@style/TEXT"
        android:textSize="34sp"
        android:textStyle="bold"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.092" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TEXT"
        android:text="@string/enter_information_below"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.043" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="224dp"
        android:layout_height="41dp"
        android:background="@drawable/myshape"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="8dp"
        style="@style/TEXT"

        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.27" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="227dp"
        android:layout_height="42dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/myshape"
        android:drawableLeft="@drawable/lock_24dp_fill0_wght400_grad0_opsz24"
        android:drawablePadding="8dp"
        style="@style/TEXT"
        android:ems="10"

        android:hint="confirm password"

        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextTextPassword4"
        android:layout_width="216dp"
        android:layout_height="47dp"
        android:background="@drawable/myshape"
        android:drawableLeft="@drawable/lock_24dp_fill0_wght400_grad0_opsz24"
        android:drawablePadding="8dp"
        android:ems="10"
        style="@style/TEXT"
        android:hint="Enter password"
        android:inputType="textPassword"
        android:padding="8dp"

        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextText"
        style="@style/TEXT"
        android:layout_width="224dp"
        android:layout_height="43dp"
        android:background="@drawable/myshape"
        android:drawableLeft="@drawable/baseline_supervised_user_circle_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BUTTON"
        android:text="@string/sign_up"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="667dp" />

</androidx.constraintlayout.widget.ConstraintLayout>